Cherry-pick 270971@main (2f3793730f22). https://bugs.webkit.org/show_bug.cgi?id=253807

[GTK][GStreamer] VA+DMABuf videos flicker
    https://bugs.webkit.org/show_bug.cgi?id=253807

    Reviewed by Xabier Rodriguez-Calvar.

    This is the dumb approach of storing references and dropping them upon new samples. It still has
    flaws since the is-released check is not necessarily consistent and can lead to retained GstMemory
    references, draining the decoder of available dmabuf targets for decoding.

    Co-authored-by: Philippe Normand <philn@igalia.com>

    * Source/WebCore/platform/graphics/gstreamer/GRefPtrGStreamer.cpp:
    (WTF::adoptGRef):
    (WTF::refGPtr<GstMemory>):
    (WTF::derefGPtr<GstMemory>):
    * Source/WebCore/platform/graphics/gstreamer/GRefPtrGStreamer.h:
    * Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
    (WebCore::MediaPlayerPrivateGStreamer::pushDMABufToCompositor):
    * Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.h:

    Canonical link: https://commits.webkit.org/270971@main